[package]
name = "repetition_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
csv = "1"

[dev-dependencies]
tempfile = "3"
