[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "repetition-analyzer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
repetition-analyzer = "repetition_analyzer.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff", "basedpyright", "maturin>=1.9.4"]

[tool.maturin]
manifest-path = "native-helper/Cargo.toml"
features = ["python"]
python-packages = ["repetition_analyzer"]

[tool.pyright]
stubPath = "native-helper"
exclude = [".venv", "build", "dist", ".git", "tests", "native-helper", "tmp"]
reportUnknownParameterType = true
reportUninitializedInstanceVariable = true
reportMissingTypeStubs = false
reportExplicitAny = false
reportAny = false
reportUnannotatedClassAttribute = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportImplicitStringConcatenation = false
reportMissingImports = true
reportMissingModuleSource = false
reportUnusedCallResult = false
reportImplicitOverride = false
