[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repetition-analyzer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
repetition-analyzer = "repetition_analyzer.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff", "basedpyright", "maturin>=1.9.4"]

[tool.maturin]
manifest-path = "native-helper/Cargo.toml"
features = ["python"]
module-name = "repetition_analyzer._native"

[tool.pyright]
exclude = [".venv", "build", "dist", ".git", "tests", "native-helper", "tmp"]
