[package]
name = "native-helper"
version = "0.1.0"
edition = "2021"

[lib]
name = "native_helper"
crate-type = ["cdylib"]

[features]
default = []
python = ["dep:pyo3", "dep:pythonize"]

[dependencies]
pyo3 = { version = "0.28", optional = true, features = ["extension-module"] }
pythonize = { version = "0.28", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
